--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,12 @@
+# Backend Environment Variables
+# Copy this file to .env and update with your actual values
+
 # OpenAI API Configuration
-# Get your API key from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=
+OPENAI_API_KEY=your_openai_api_key_here
+
+# CORS Configuration
+ALLOWED_ORIGINS=http://localhost:3000
+
+# Database Configuration (for local development without Docker)
+# When using Docker Compose, these are set by docker-compose.yml
+# DATABASE_URL=postgresql+asyncpg://librilabs:librilabs_dev@localhost:5432/librilabs_translator
