completed db setup

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,12 +1,16 @@
 # Backend Environment Variables
 # Copy this file to .env and update with your actual values
 
+# Database Configuration
+# Format: postgresql+asyncpg://user:password@host:port/dbname
+# Local development (Docker Compose): 
+#DATABASE_URL=postgresql+asyncpg://librilabs:librilabs_dev@postgres:5432/librilabs_translator
+# Local development (direct connection): postgresql+asyncpg://librilabs:librilabs_dev@localhost:5432/librilabs_translator
+# Production (Railway): Set via Railway environment variables
+DATABASE_URL=postgresql+asyncpg://librilabs:librilabs_dev@postgres:5432/librilabs_translator
+
 # OpenAI API Configuration
 OPENAI_API_KEY=your_openai_api_key_here
 
 # CORS Configuration
 ALLOWED_ORIGINS=http://localhost:3000
-
-# Database Configuration (for local development without Docker)
-# When using Docker Compose, these are set by docker-compose.yml
-# DATABASE_URL=postgresql+asyncpg://librilabs:librilabs_dev@localhost:5432/librilabs_translator
