--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,4 +23,6 @@ python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
 asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "session"
+asyncio_default_test_loop_scope = "function"
 
