--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,18 @@ uvicorn[standard]>=0.32.0
 pydantic>=2.9.0
 pydantic-settings>=2.5.0
 
+# Database
+sqlalchemy>=2.0.0
+asyncpg>=0.29.0
+alembic>=1.13.0
+greenlet>=3.0.0
+
 # Development and security tools
 pre-commit>=4.5.0
 detect-secrets>=1.5.0
+
+# Testing
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+httpx>=0.24.0
 
